# screen

./: CMakeLists.txt  manifest.json.in
app/: CMakeLists.txt  Screen.qml  screen.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/Screen/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/Screen/: backend.cpp  backend.h  qmldir  screen.cpp  screen.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: screen.liu-xiao-guo.pot
